# llm-twin

./: .env.example  INSTALL_AND_USAGE.md  Makefile  README.md  docker-compose.yml  pyproject.toml  tasks.md
.devcontainer/: devcontainer.json
.docker/: .dockerignore  Dockerfile.api  Dockerfile.cdc_listener  Dockerfile.feature_pipeline  Dockerfile.postgres
postgres/: init-db.sh
postgres/migrations/: 0001_create_users_table.sql  0002_create_articles_table.sql  0003_create_posts_table.sql  0004_create_repositories_table.sql  0005_add_updated_at_trigger.sql  0006_create_notify_data_change_function.sql  0007_create_articles_insert_trigger.sql  0008_create_posts_insert_trigger.sql  0009_create_repositories_insert_trigger.sql  0010_add_colleciton_id_row.sql
src/api/: key_validation.py  main.py
src/api/routers/: crawling.py  inference.py
src/api/schemas/: crawler.py  inference.py
src/cdc_listener/: listener.py  test_listener.py
src/core/: config.py  lib.py  mq.py  opik_utils.py
src/core/aws/: create_execution_role.py
src/core/db/: __init__.py  documents.py  minio_client.py  qdrant.py  supabase_client.py
src/core/llm_clients/: __init__.py  base.py  openai_client.py
src/core/rag/: query_expanison.py  reranking.py  retriever.py  self_query.py
src/data_crawling/: dispatcher.py  main.py
src/data_crawling/crawlers/: base.py  custom_article.py  (+3 more)
src/feature_pipeline/: config.py  main.py  retriever.py
src/inference_pipeline/: config.py  llm_twin.py  main.py  prompt_templates.py  ui.py
supabase/: .gitignore  config.toml
supabase/migrations/: 0001_create_users_table.sql  0004_create_repositories_table.sql  0007_create_articles_insert_trigger.sql  0009_create_repositories_insert_trigger.sql
tests/cdc_listener/: test_listener.py
(+22 files in other folders)
